# tihrc-migine

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: publish.yml
rust/: ast.rs  lib.rs  parsed.rs  pyast.rs  tokenized.rs
tests/: test0606.py  test0806.py  test1106.py  test_parse.py  test_translator.py
tihrc/migine/: __init__.py  core.py  engine.py  protocols.py  rendered.py  store.py  tables.py  translator.py  units.py
tihrc/migine/_core_migine/: __init__.pyi
