[package]
name = "tihrc_migine"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
path = "rust/lib.rs"
name = "_core_migine"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "rust/bin/stub_gen.rs"

[dependencies]
pyo3 = { version = "0.28.0", features = ["extension-module", "py-clone", "abi3"] }
pyo3-stub-gen = "0.22.3"
