[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "tihrc_migine"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "altgraph>=0.17.5",
    "attrs>=26.1.0",
    "numpy>=2.4.6",
    "sympy>=1.14.0",
]

[tool.maturin]
python-source = "."
module-name = "tihrc.migine._core_migine"
features = ["pyo3/extension-module"]
include = ["tihrc/**/*.py", "tihrc/*.pyi"]
